Bug 88675 - ICONS: Options dialog has 'Hicontrast' rather than 'High Contrast'
Summary: ICONS: Options dialog has 'Hicontrast' rather than 'High Contrast'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: Other All
: medium normal
Assignee: Tobias Lippert
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: High-Contrast
  Show dependency treegraph
 
Reported: 2015-01-21 20:23 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-27 12:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-01-21 20:23:26 UTC
If you open the Tools > Options dialog in the View entry, it will list 'Hicontrast' rather than 'High Contrast'. Regression as 4.2.6 has it has 'High Contrast'. This also happens with 'Tango Testing' appearing as 'Tango_testing'. It seems to be using the folder names (e.g. core/icons-themes/tango_testing/ ).

Version: 4.2.6.2
Build ID: 185f2ce4dcc34af9bd97dec29e6d42c39557298f

Version: 4.5.0.0.alpha0+
Build ID: 39ac529d141dcd4de534eddbcc6c07bc49367b90
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-01-04_00:40:43
Comment 1 Robinson Tryon (qubit) 2015-01-22 08:54:30 UTC
TESTing with ooboontoo 14.oh-four +
LO Version: 4.5.0.0.alpha0+
Build ID: 84c69550bcb8139669de9cf98b51c35f21fe853d
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-01-13_08:44:23
Locale: en_US

(In reply to Jay Philips from comment #0)
REPRO Steps:
> If you open the Tools > Options dialog in the View entry, it will list
> 'Hicontrast' rather than 'High Contrast'.

CONFIRMED
Status -> NEW

> Regression as 4.2.6 has it has
> 'High Contrast'. This also happens with 'Tango Testing' appearing as
> 'Tango_testing'. It seems to be using the folder names (e.g.
> core/icons-themes/tango_testing/ ).

Keywords -> regression
Comment 2 Matthew Francis 2015-02-21 12:58:54 UTC
This changed over the following range in bibisect 43all
# only skipped commits left to test
# possible first bad commit: [558a70aa9c9ae73a339b9782680cec98526bb823] source-hash-fedebb269e815a3475cefc21556031e09bb3f35e
# possible first bad commit: [94d9d32ab850f35929d7d44328e6d1a68a9540a2] source-hash-278409c3f175b562453c8a7a0e139eadfe41ba11

Without actually building to check, it looks ~certain that this was changed by the below commit.

Adding Cc: to drtl@fastmail.fm; Could you possibly take a look at this? Thanks


commit 076a7eacca48f203f0a8b9aa537e88fea9a88409
Author: Tobias Lippert <drtl@fastmail.fm>
Date:   Sun Feb 9 00:53:28 2014 +0100

    Bug #63962 Dynamically scan the config directory for icon themes
    
    The hard-coded icon themes have been replaced by a dynamic list
    which is filled by scanning the config directory
Comment 3 Tobias Lippert 2015-02-21 16:19:27 UTC
Hello,

sure, I will look into it, and hard-code human readable names to the filename. (this was the way it was before).

Will hicontrast -> "High Contrast" and tango_testing -> "Tango Testing" suffice?

Of course what is really missing is a concept on how to map the filenames to human readable format, but that is another story.

Tobias
Comment 4 Tobias Lippert 2015-02-21 20:37:17 UTC
I have pushed a fix which is currently waiting for review:
https://gerrit.libreoffice.org/14574
Comment 5 Tobias Lippert 2015-05-24 11:10:03 UTC
Is this still an issue? The patch has not yet been merged. How can I get it to be reviewed?
Comment 6 Commit Notification 2015-05-27 12:25:07 UTC
Tobias Lippert committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a0118a98fc39dfed56fb7904733f63f6a2d6fe8

tdf#88675 Fix display names for hicontrast and tango_testing

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-05-27 13:41:01 UTC
Tobias Lippert committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e586f2c7de035d2768f96e51b89c63e9377fd403&h=libreoffice-5-0

tdf#88675 Fix display names for hicontrast and tango_testing

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 08:45:21 UTC Comment hidden (obsolete)