tdf#88675 Fix display names for hicontrast and tango_testing

The special cases for the icon themes with the filenames
"images_hicontrast.zip" and "images_tango_testing.zip" are now handled.
They will be displayed as "High Contrast" and "Tango Testing"
respectively.

Change-Id: Ia3c2b8b57809db9c5ed132c42a412157e91b2599